--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.29.1",
     "npm": "^7.21.0",
     "prop-types": "^15.7.2",
+    "radium": "^0.26.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-moment": "^1.1.1",
