--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
-node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+*.lock
+
+# Dependency directories
+package-lock.json
+/node_modules
+
+# Optional npm cache directory
+.npm
+
+# Prod Bundle
+/build
+*.zip
+
 .DS_Store
 .gitignore
