--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skt-go",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./",
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "GENERATE_SOURCEMAP=false react-scripts --openssl-legacy-provider build",
@@ -10,38 +10,27 @@
     "deploy": "vk-miniapps-deploy"
   },
   "keywords": [],
-  "author": "Sergey Ushakov",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vkontakte/vk-miniapps-deploy": "^0.0.25",
+    "@vkontakte/vk-miniapps-deploy": "0.0.25",
     "cross-env": "^5.2.1",
-    "react-hot-loader": "^4.12.19",
     "react-scripts": "^2.1.8",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "2.13.9"
   },
   "dependencies": {
-    "@vkontakte/icons": "^1.124.0",
-    "@vkontakte/vk-bridge": "^2.9.0",
-    "@vkontakte/vk-connect": "^1.9.1",
-    "@vkontakte/vk-tunnel": "^0.1.0",
-    "@vkontakte/vkjs": "^0.21.0",
-    "@vkontakte/vkui": "^4.2.1",
-    "babel-eslint": "^9.0.0",
-    "chalk": "^2.4.2",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@vkontakte/icons": "^1.16.1",
+    "@vkontakte/vk-bridge": "^2.4.1",
+    "@vkontakte/vkui": "^4.43.0",
+    "moment": "^2.30.1",
     "core-js": "^2.6.11",
     "eruda": "^2.4.1",
     "eruda-code": "^2.0.0",
     "eruda-dom": "^2.0.0",
-    "moment": "^2.29.1",
-    "npm": "^7.21.0",
-    "prop-types": "^15.7.2",
-    "radium": "^0.26.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-moment": "^1.1.1",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-redux": "^7.2.8"
   },
   "browserslist": [
     ">0.2%",
